manifests/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: helloworld
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
